[metadata]
name = int_seq_des
version = 0.1.0
author = Lu Hong
author_email = honglu88@gmail.com
description = Integrative protein sequence design with evolutionary multiobjective optimization.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    python_version >= "3.7"
    pymoo
    Bio
    numpy
    scipy
    pandas
    torch